<resources>
    <string name="app_name">OtroPelisPlus+</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_reproductor">Reproductor</string>
    <string name="menu_peliculas">Peliculas</string>
    <string name="menu_series">Series</string>
    <string name="menu_animes">Animes</string>

    <string-array name="urls">
        <item>https://pelisplushd.net</item>
        <item>https://pelisplushd.net/peliculas</item>
        <item>https://pelisplushd.net/series</item>
        <item>https://pelisplushd.net/animes</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="version_num">https://raw.githubusercontent.com/kaizokuapps/OtroPelisPlusMas/main/version.num</string>
    <string name="apk_url">https://github.com/kaizokuapps/OtroPelisPlusMas/raw/main/release/app-release.apk</string>
    <string name="menu_about">Acerca de</string>
    <string name="url_changelog">https://raw.githubusercontent.com/kaizokuapps/OtroPelisPlusMas/main/changelog.json</string>
    <string name="menu_favoritos">Favoritos</string>

</resources>